Fixed contrast issues

--- a/assets/css/dark-styles.css
+++ b/assets/css/dark-styles.css
@@ -267,6 +267,11 @@
 	.content a {
 		color: #fff !important;
 	}
+
+	.serviceicon {
+		filter: invert(1);
+		-webkit-filter: invert(1);
+	}
 }
 
 
